--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="utf-8">
-    <title>FreeCoffe</title>
+    <title>FreeCoffee</title>
     <meta name="viewport" content="width=device-width,user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimun-scale=1.0">
      <link href="https://file.myfontastic.com/t5tNwfwUapz4yDzK3B6sfe/icons.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/estilos.css">
@@ -33,7 +33,7 @@
     <div class="banner" id="banner">
         <img src="img/cafeycafetera.jpg">
          <div class="contenedor">
-        <h1 class="banner__titulo animate__animated animate__bounceIn">Free Coffe</h1>
+        <h1 class="banner__titulo animate__animated animate__bounceIn">Free Coffee</h1>
         <p class="banner__txt animate__animated animate__bounceIn">Una experiencia para compartir</p>
         </div>
     </div>
@@ -47,7 +47,7 @@
           </article>
           <article class="info__columna">
             <img src="img/cafeteria-armenia.jpg" alt="" class="info__img">
-            <h2 class="info__titulo">¿Por qué Free Coffe?</h2>
+            <h2 class="info__titulo">¿Por qué Free Coffee?</h2>
             <p class="info__txt">Esta cafeteria nació por el amor al café y lo dulce pero para todos. Free Caffe no contiene gluten ni lactosa por lo que cada persona puede disfrutar de sus sabores.</p>
           </article>
           <article class="info__columna">
