--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,100;1,400&display=swap" rel="stylesheet">
-<link rel="icon" type="image/jpg" href="/img/favicon.ico?"/>
+<link rel="icon" href="https://julietaguarna.github.io/TPO/img/favicon.ico"/>
 </head>
 <body>
    <header class="header">
