--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <label for="Correo" class="formulario_label">Correo de contacto</label>
             <input type="tel" name="telefono" id="telefono" class="formulario_input">
             <label for="telefono"  class="formulario_label">Teléfono de contacto</label>
-            <textarea class="contacto" rows="10" cols="40"> Detalla tu pedido</textarea>
+            <textarea class="contacto" id="formulario_input" rows="10" cols="40"> Detalla tu pedido</textarea>
             <input type="submit" id="formulario_submit" class="formulario_submit" value="Enviar">
           </form>
         </div>
